# lantern

./: .gitignore  README.md  client.py  config.json  frame.py  getkeys.py  lantern  pyproject.toml  server.py
client/: auth_ui.py  commands.py  config.py  history.py  net.py  state.py  ui.py
lantern_chat/: client_main.py  frame.py  server_main.py
lantern_chat/client/: auth_ui.py  commands.py  config.py  net.py  state.py  ui.py
lantern_chat/client/net/: __init__.py  image.py  manager.py  receive.py  send.py
lantern_chat/server/: net.py  netbackup.py  state.py
lantern_chat/server/net/: __init__.py  handlers.py  manager.py
server/: config.json  net.py  newnet.py  oldnet.py  state.py
