[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lantern-chat"
version = "1.3.4"
description = "A lightweight TUI chat application for your terminal"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Benji Brown", email = "benjnib09@gmail.com"},
    { name = "Dennis Upton", email = "dennisjupton@gmail.com"} # not sure about this
]
requires-python = ">=3.8"
dependencies = ["rich", "Pillow","opencv-python"]

[project.urls]
Homepage = "https://github.com/benjibrown/lantern"
Issues = "https://github.com/benjibrown/lantern/issues"

[project.scripts]
lantern = "lantern_chat.client_main:main"
lantern-server = "lantern_chat.server_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lantern_chat*"]
